<resources>
    <string name="app_name">Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="app_name_slogan">Calculate anything easily and quickly</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="div">/</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="mul">*</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="sub">-</string>
    <string name="cancel">c</string>
    <string name="zero">0</string>
    <string name="equal">=</string>
    <string name="add">+</string>
    <string name="comma">.</string>
    <string name="dispHint">Enter values</string>
    <string name="result">"Result : "</string>
    <string name="performOperation">Perform Operation :)</string>
    <string name="Calc">com.example.iths.calculator.Calc</string>
</resources>
