<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/softGrey"
    tools:context=".Home">
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id = "@+id/display"
        android:hint="@string/dispHint"
        android:textSize="25sp"
        />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingTop="15dp">
        <Button
            android:layout_width="240dp"
            android:layout_height="70dp"
            android:textSize="20sp"
            android:id="@+id/cancel"
            android:text="@string/cancel"
            tools:ignore="ButtonStyle" />
        <Button
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:textSize="20sp"
            android:id="@+id/div"
            android:text="@string/div"
            tools:ignore="ButtonStyle" />

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingTop="10dp"
        >
        <Button
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:textSize="20sp"
            android:id="@+id/seven"
            android:text="@string/seven"
            tools:ignore="ButtonStyle"/>
        <Button
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:textSize="20sp"
            android:id="@+id/eight"
            android:text="@string/eight"
            tools:ignore="ButtonStyle" />
        <Button
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:textSize="20sp"
            android:id="@+id/nine"
            android:text="@string/nine"
            tools:ignore="ButtonStyle" />
        <Button
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:textSize="20sp"
            android:id="@+id/mul"
            android:text="@string/mul"
            tools:ignore="ButtonStyle" />

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingTop="10dp">
        <Button
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:textSize="20sp"
            android:id="@+id/four"
            android:text="@string/four"
            tools:ignore="ButtonStyle" />
        <Button
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:textSize="20sp"
            android:id="@+id/five"
            android:text="@string/five"
            tools:ignore="ButtonStyle" />
        <Button
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:textSize="20sp"
            android:id="@+id/six"
            android:text="@string/six"
            tools:ignore="ButtonStyle" />
        <Button
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:textSize="20sp"
            android:id="@+id/sub"
            android:text="@string/sub"
            tools:ignore="ButtonStyle" />

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingTop="10dp">
        <Button
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:textSize="20sp"
            android:id="@+id/one"
            android:text="@string/one"
            tools:ignore="ButtonStyle" />
        <Button
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:textSize="20sp"
            android:id="@+id/two"
            android:text="@string/two"
            tools:ignore="ButtonStyle" />
        <Button
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:textSize="20sp"
            android:id="@+id/three"
            android:text="@string/three"
            tools:ignore="ButtonStyle" />
        <Button
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:textSize="20sp"
            android:id="@+id/add"
            android:text="@string/add"
            tools:ignore="ButtonStyle" />

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingTop="10dp">


        <Button
            android:layout_width="160dp"
            android:layout_height="70dp"
            android:textSize="20sp"
            android:id="@+id/zero"
            android:text="@string/zero"
            tools:ignore="ButtonStyle" />
        <Button
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:textSize="20sp"
            android:id="@+id/comma"
            android:text="@string/comma"
            tools:ignore="ButtonStyle" />
        <Button
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:textSize="20sp"
            android:id="@+id/equal"
            android:text="@string/equal"
            tools:ignore="ButtonStyle" />


    </LinearLayout>


</LinearLayout>
